depimpulation of pimpulous pimposity
unpimping to avert the pimpocalypse

--- a/tutorials/scala-for-csharp-programmers.disabled.html
+++ b/tutorials/scala-for-csharp-programmers.disabled.html
@@ -955,7 +955,7 @@ neutered C# version.) Here’s how it looks:
       }
     }
 
-Well, big deal.  Scala can pimp existing types with new methods just like 
+Well, big deal.  Scala can enrich existing types with new methods just like 
 C#, but using a different syntax. In related news, Lisp uses a different 
 kind of bracket: film at eleven. Why should we be interested in Scala 
 implicits if they’re just another take on extension methods?
